package Shopping;
import Shopping.ID;

public class ProductID extends ID {

}
