package Shopping;
import Shopping.ID;

public class UserID extends ID {

}
