public class ShoppingBasketService {

    public void addItem(UserID userId, ProductID productId, int quantity) { }

    //public <?> basketFor(UserID userId) { }

    public String checkContent() {
        return "";
    }
}
